--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Qiucheng Chen / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Qiucheng Chen"
 description              : &description "a third-year undergraduate student from Tianjin University"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://trouverecc.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://trouverecc.github.io/"
+repository               : "https://github.com/Trouverecc"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
