--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Qiucheng Chen"
+  linkedin         : "qiucheng-chen-ab356a327"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
