--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "me.png"
   name             : "Qiucheng Chen"
   pronouns         : # example: "she/her"  
-  bio              : "Carry on. "
+  bio              : "Why not "
   location         : "China"
   employer         : 
   uri              : # URL
@@ -65,7 +65,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : "QIUCHENG CHEN"
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
