--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "QIUCHENG CHEN"
+  twitter          : "qiuchengc04"
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
