--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  # googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=qsqFLU8AAAAJ&hl=en"
   impactstory      : # URL
   orcid            : "http://orcid.org/0009-0006-7354-5329"
   semantic         : # URL
